Attache results and codes

--- a/DEGsMutSub.Rmd
+++ b/DEGsMutSub.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "MutSub DEGs of GABA mutants"
+title: "MutSub DEGs of GABA mutants after submergence"
 author: "Ying"
 output: html_document
 editor_options: 
